--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
 
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   <!-- Libraries CSS Files -->
   <link href="lib/font-awesome/css/font-awesome.min.css" rel="stylesheet">
@@ -502,22 +501,22 @@
 
 
 
-    function subjectValidation() {
-      var subjectError = document.getElementById('subject-error')
+    // function subjectValidation() {
+    //   var subjectError = document.getElementById('subject-error')
 
-      var subject = document.getElementById('subject').value;
-      var required = 20;
-      var left = required - subject.length;
+    //   var subject = document.getElementById('subject').value;
+    //   var required = 20;
+    //   var left = required - subject.length;
 
-      if (left > 0) {
-        subjectError.innerHTML = ' At least 20 character.';
-        return false;
-      } else {
-        subjectError.innerHTML = 'Enter a valid subject';
-      }
-      subjectError.innerHTML = '';
-      return true;
-    }
+    //   if (left > 0) {
+    //     subjectError.innerHTML = ' At least 20 character.';
+    //     return false;
+    //   } else {
+    //     subjectError.innerHTML = 'Enter a valid subject';
+    //   }
+    //   subjectError.innerHTML = '';
+    //   return true;
+    // }
 
     function messageValidation() {
 
@@ -558,6 +557,7 @@
   </script>
 
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   <script>
 
