--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@
           <div class="work-box">
             <a href="img/work-3.jpg" data-lightbox="gallery-mf">
               <div class="work-img">
-                <img src="img/3.jpg" alt="" class="img-fluid">
+                <a href="https://github.com/aerju/personal-website.git" target="_blank"> <img src="img/3.jpg" alt="" class="img-fluid"></a>
               </div>
               <div class="work-content">
                 <div class="row">
@@ -314,7 +314,7 @@
                   </div>
                   <div class="col-sm-4">
                     <div class="w-like">
-                      <span class="ion-ios-plus-outline"></span>
+                     <a href="https://github.com/aerju/personal-website.git" target="_blank"><span class="ion-ios-plus-outline"></span></a> 
                     </div>
                   </div>
                 </div>
